2005-01-24  Janis Johnson  <janis187@us.ibm.com>

	* lib/gcc-dg.exp (skip_test_and_clear_xfail): Remove.
	(dg-require-weak, dg-require-visibility, dg-require-alias,
	dg-require-dg-sections, dg-require-profiling, dg-require-iconv,
	dg-require-effective-target, dg-skip-if): Remove call to
	skip_test_and_clear_xfail.
	(dg-test): Clear xfail data.

2005-01-24  Jakub Jelinek  <jakub@redhat.com>

	PR target/17751
	* gcc.dg/ppc64-toc.c: New test.

	* g++.dg/tree-ssa/empty-1.C: New test.

	PR middle-end/19551
	* gcc.c-torture/execute/20050121-1.c: New test.
	* gcc.dg/20050121-2.c: New test.

2004-01-23  Steven G. Kargl  <kargls@comcast.net>
	Paul Brook  <paul@codesourcery.com>

	PR fortran/17941
	* gfortran.dg/real_const_1.f: New test.
	* gfortran.dg/real_const_2.f90: New test.
	* gfortran.dg/complex_int_1.f90: New test.

2005-01-23  Bud Davis  <bdavis9659@comcast.net>

	PR fortran/19313
	* gfortan.dg/inquire_6.f90: New test.

2005-01-22  Thomas Koenig  <Thomas.Koenig@online.de>

	PR libfortran/19451
	* open_readonly_1.f90:  New test.

2005-01-22  Thomas Koenig  <Thomas.Koenig@online.de>

	PR libfortran/18982
	* gfortran.dg/open_new.f90: New file.

2005-01-22  Paul Brook  <paul@codesourcery.com>

	* namelist_1.f90: New test.

2005-01-22  Richard Sandiford  <rsandifo@redhat.com>

	PR tree-optimization/19484
	* gcc.c-torture/compile/20050122-[12].c: New tests.

2005-01-22  Paul Brook  <paul@codesourcery.com>

	* gfortran.dg/implicit_2.f90: New test.

2005-01-22  Bud Davis  <bdavis9659@comcast.net>

	PR fortran/19314
	* gfortran.dg/inquire_5.f90: New test.

2005-01-22  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR c/18809
	* gcc.dg/pr18809-1.c: New test.

2005-01-21  Ian Lance Taylor  <ian@airs.com>

	* gcc.dg/20050121-1.c: New test.

	PR tree-optimization/13000
	* gcc.dg/20040206-1.c: Change warning to point where function is
	being inlined.

2005-01-21  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/19208
	* g++.dg/template/array11.C: New test.
